homeworks/files/pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: netology-web
  name: netology-web
spec:
  containers:
  - name: netology-web
    image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
    ports:
    - containerPort: 8080
