homeworks/files/service1.3.1.yml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
spec:
  selector:
    app: nginx-multi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 81
